--- a/client/src/app/contracts/contract-edit/contract-edit.component.html
+++ b/client/src/app/contracts/contract-edit/contract-edit.component.html
@@ -1,1 +1,13 @@
-<p>contract-edit works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Edytuj</h1>
+    <div class="row">
+        <div class="col-6">
+            <form #form="ngForm" (ngSubmit)="updateContract()">
+                <div class="mb-3">
+                    <label for="contractNumber" class="form-label">Numer</label>
+                    <input type="number" class="form-control" name="contractNumber" >
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
