--- a/client/src/app/add/add.component.html
+++ b/client/src/app/add/add.component.html
@@ -7,7 +7,7 @@
             <input type="number" class="form-control" id="contractNumber" name="contractNumber" ngModel placeholder="Numer umowy" required>
           </div>
           <div class="mb-3">
-            <label for="name">Name</label>
+            <label for="name">Nazwa</label>
             <input type="text" class="form-control" id="name" name="name" ngModel placeholder="Nazwa" required>
           </div>
           <div class="mb-3">
