--- a/client/src/app/contracts/contract-edit/contract-edit.component.html
+++ b/client/src/app/contracts/contract-edit/contract-edit.component.html
@@ -1,13 +1,55 @@
 <div class="container my-5">
-    <h1 class="mb-3">Edytuj</h1>
-    <div class="row">
-        <div class="col-6">
-            <form #form="ngForm" (ngSubmit)="updateContract()">
-                <div class="mb-3">
-                    <label for="contractNumber" class="form-label">Numer</label>
-                    <input type="number" class="form-control" name="contractNumber" >
-                </div>
-            </form>
-        </div>
+  <h1 class="mb-3">Edytuj umowę</h1>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="btn btn-warning" routerLink="/contracts" routerLinkActive="active">Powrót</button>
+  </div>
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+    <div class="mb-3">
+      <label for="contractNumber">Numer umowy</label>
+      <input type="number" class="form-control" id="contractNumber" name="contractNumber" ngModel
+        placeholder="Numer umowy" required>
     </div>
+    <div class="mb-3">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" name="name" ngModel placeholder="Nazwa" required>
+    </div>
+    <div class="mb-3">
+      <label for="description">Opis</label>
+      <input type="text" class="form-control" id="description" name="description" ngModel placeholder="Opis" required>
+    </div>
+    <div class="mb-3">
+      <label for="contractTypeOne">Typ 1</label>
+      <input type="number" class="form-control" id="contractTypeOne" name="contractTypeOne" ngModel placeholder="Typ 1"
+        required>
+    </div>
+    <div class="mb-3">
+      <label for="contractTypeTwo">Typ 2</label>
+      <input type="number" class="form-control" id="contractTypeTwo" name="contractTypeTwo" ngModel placeholder="Typ 2"
+        required>
+    </div>
+    <div class="mb-3">
+      <label for="dateOfConclusion">Data zawarcia</label>
+      <input type="datetime" class="form-control" id="dateOfConclusion" name="dateOfConclusion" ngModel
+        placeholder="Data zawarcia" required>
+    </div>
+    <div class="mb-3">
+      <label for="value">Wartość</label>
+      <input type="number" class="form-control" id="value" name="value" ngModel placeholder="Wartość" required>
+    </div>
+    <div class="mb-3">
+      <label for="contractor">Kontraktor</label>
+      <input type="text" class="form-control" id="contractor" name="contractor" ngModel placeholder="Kontraktor"
+        required>
+    </div>
+    <div class="mb-3">
+      <label for="signatory">Sygnatariusz</label>
+      <input type="text" class="form-control" id="signatory" name="signatory" ngModel placeholder="Sygnatariusz"
+        required>
+    </div>
+    <div class="mb-3">
+      <label for="pdf">PDF</label>
+      <input type="text" class="form-control" id="pdf" name="pdf" ngModel placeholder="PDF" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Zapisz</button>
+  </form>
 </div>
