--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -8,7 +8,13 @@
               <a class="nav-link" routerLink="/contracts" routerLinkActive="active">Umowy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/add" routerLinkActive="active">Dodaj</a>
+              <a class="nav-link" routerLink="/add" routerLinkActive="active">Dodaj umowę</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/contractTypeOnes" routerLinkActive="active">Typy 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/contractTypeTwos" routerLinkActive="active">Typy 2</a>
             </li>
           </ng-container>
           <li class="nav-item">
