--- a/client/src/app/contracts/contract-list/contract-list.component.html
+++ b/client/src/app/contracts/contract-list/contract-list.component.html
@@ -23,8 +23,8 @@
                     <th>Wartość</th>
                     <th>Kontraktor</th>
                     <th>Sygnatariusz</th>
-                    <th>Dodaj PDF</th>
-                    <th></th>
+                    <th>Dodaj</th>
+                    <th>Pobierz</th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -44,11 +44,11 @@
                     <td>{{contract.signatory}}</td>
                     <td>
                         <input type="file" #fileInput style="display: none" (change)="onFileSelected($event, contract.id)">
-                        <button class="btn btn-secondary" (click)="fileInput.click()">Dodaj PDF</button>
+                        <button class="btn btn-secondary" (click)="fileInput.click()"><i class="bi bi-upload"></i></button>
                     </td>
-                    <td><button class="btn btn-primary" (click)="downloadPdf(contract.id)" [disabled]="!contract.hasPdf">PDF</button></td>
-                    <td><button class="btn btn-success" routerLink="/contract/edit/{{contract.id}}">Edytuj</button></td>
-                    <td><button class="btn btn-danger" (click)="deleteContract(contract.id)">Usuń</button></td>
+                    <td><button class="btn btn-primary" (click)="downloadPdf(contract.id)" [disabled]="!contract.hasPdf"><i class="bi bi-download"></i></button></td>
+                    <td><button class="btn btn-success" *appHasRole="['Writer']" routerLink="/contract/edit/{{contract.id}}">Edytuj</button></td>
+                    <td><button class="btn btn-danger" *appHasRole="['Admin']" (click)="deleteContract(contract.id)">Usuń</button></td>
                     <td><button class="btn btn-outline-warning" [routerLink]="['/annexByContract', contract.id]">Aneksy</button></td>
                 </tr>
             </tbody>
