--- a/client/src/app/add/add.component.html
+++ b/client/src/app/add/add.component.html
@@ -36,7 +36,7 @@
           </div>
           <div class="mb-3">
             <label for="dateOfConclusion">Data zawarcia</label>
-            <input type="datetime" class="form-control" id="dateOfConclusion" name="dateOfConclusion" ngModel placeholder="Data zawarcia" required>
+            <input type="date" class="form-control" id="dateOfConclusion" name="dateOfConclusion" ngModel placeholder="Data zawarcia" required>
           </div>
           <div class="mb-3">
             <label for="value">Wartość</label>
