--- a/client/src/app/admin/user-management/user-management.component.html
+++ b/client/src/app/admin/user-management/user-management.component.html
@@ -5,6 +5,7 @@
                 <th style="width: 30%;">Nazwa użytkownika</th>
                 <th style="width: 30%;">Rola</th>
                 <th style="width: 30%;"></th>
+                <th style="width: 30%;"></th>
             </tr>
         </thead>
         <tbody>
