--- a/client/src/app/annexes/annex-add/annex-add.component.html
+++ b/client/src/app/annexes/annex-add/annex-add.component.html
@@ -21,7 +21,7 @@
           <div class="mb-3">
           <div class="mb-3">
             <label for="dateOfConclusion">Data zawarcia</label>
-            <input type="datetime" class="form-control" id="dateOfConclusion" name="dateOfConclusion" ngModel placeholder="Data zawarcia" required>
+            <input type="date" class="form-control" id="dateOfConclusion" name="dateOfConclusion" ngModel placeholder="Data zawarcia" required>
           </div>
           <div class="mb-3">
             <label for="contractor">Kontraktor</label>
