--- a/client/src/app/contracts/contract-list/contract-list.component.html
+++ b/client/src/app/contracts/contract-list/contract-list.component.html
@@ -17,8 +17,8 @@
                     <th>Nr kontraktu</th>
                     <th>Nazwa</th>
                     <th>Opis</th>
-                    <th>Typ 1</th>
-                    <th>Typ 2</th>
+                    <th>Kategoria</th>
+                    <th>Podkategoria</th>
                     <th>Data zawarcia</th>
                     <th>Wartość</th>
                     <th>Kontraktor</th>
