--- a/client/src/app/contractType/contract-type-two-add/contract-type-two-add.component.html
+++ b/client/src/app/contractType/contract-type-two-add/contract-type-two-add.component.html
@@ -2,8 +2,14 @@
     <h1 class="mb-3">Dodaj typ 2</h1>
 
     <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+      <div class="mb-3">
+        <label for="contractTypeOneId">Kategoria</label>
+        <select class="form-control" id="contractTypeOneId" name="contractTypeOneId" ngModel required>
+          <option *ngFor="let typeOne of contractTypeOnes" [value]="typeOne.id">{{ typeOne.name }}</option>
+        </select>
+      </div>
           <div class="mb-3">
-            <label for="name">Name</label>
+            <label for="name">Nazwa</label>
             <input type="text" class="form-control" id="name" name="name" ngModel placeholder="Nazwa" required>
           </div>
           <button type="submit" class="btn btn-primary">Dodaj</button>
