--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -11,10 +11,10 @@
               <a class="nav-link" routerLink="/add" routerLinkActive="active">Dodaj umowę</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/contractTypeOnes" routerLinkActive="active">Typy 1</a>
+              <a class="nav-link" routerLink="/contractTypeOnes" routerLinkActive="active">Kategorie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/contractTypeTwos" routerLinkActive="active">Typy 2</a>
+              <a class="nav-link" routerLink="/contractTypeTwos" routerLinkActive="active">Podkategorie</a>
             </li>
             <li *appHasRole="['Admin']" class="nav-item">
               <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin</a>
