--- a/client/src/app/contracts/contract-list/contract-list.component.html
+++ b/client/src/app/contracts/contract-list/contract-list.component.html
@@ -4,6 +4,14 @@
         <form [formGroup]="searchForm" class="searchBar" (ngSubmit)="onSearchSubmit()">
             <div class="input-group">
                 <input type="text" placeholder="Wprowadź frazę" formControlName="searchPhrase" class="form-control">
+                <select formControlName="contractTypeOneId" class="form-control">
+                    <option value="">Wybierz kategorię</option>
+                    <option *ngFor="let typeOne of contractTypeOnes" [value]="typeOne.id">{{ typeOne.name }}</option>
+                  </select>
+                  <select formControlName="contractTypeTwoId" class="form-control">
+                    <option value="">Wybierz podkategorię</option>
+                    <option *ngFor="let typeTwo of contractTypeTwos" [value]="typeTwo.id">{{ typeTwo.name }}</option>
+                  </select>
                 <button type="submit" class="btn btn-primary" (ngSubmit)="onSearchSubmit()">Szukaj</button>
                 <button type="button" class="btn btn-danger" (click)="clearSearch()">Usuń filtr</button>
             </div>
