--- a/client/src/app/contractType/contract-type-one-add/contract-type-one-add.component.html
+++ b/client/src/app/contractType/contract-type-one-add/contract-type-one-add.component.html
@@ -1,9 +1,9 @@
 <div class="container my-5">
-    <h1 class="mb-3">Dodaj typ 1</h1>
+    <h1 class="mb-3">Dodaj kategorię</h1>
 
     <form #form="ngForm" (ngSubmit)="onSubmit(form)">
           <div class="mb-3">
-            <label for="name">Name</label>
+            <label for="name">Nazwa kategorii</label>
             <input type="text" class="form-control" id="name" name="name" ngModel placeholder="Nazwa" required>
           </div>
           <button type="submit" class="btn btn-primary">Dodaj</button>
