--- a/client/src/app/contractType/contract-type-two-add/contract-type-two-add.component.html
+++ b/client/src/app/contractType/contract-type-two-add/contract-type-two-add.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-    <h1 class="mb-3">Dodaj typ 2</h1>
+    <h1 class="mb-3">Dodaj podkategorię</h1>
 
     <form #form="ngForm" (ngSubmit)="onSubmit(form)">
       <div class="mb-3">
@@ -9,7 +9,7 @@
         </select>
       </div>
           <div class="mb-3">
-            <label for="name">Nazwa</label>
+            <label for="name">Nazwa podkategorii</label>
             <input type="text" class="form-control" id="name" name="name" ngModel placeholder="Nazwa" required>
           </div>
           <button type="submit" class="btn btn-primary">Dodaj</button>
