--- a/client/src/app/contractType/contract-type-one-list/contract-type-one-list.component.html
+++ b/client/src/app/contractType/contract-type-one-list/contract-type-one-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="table-responsive">
-        <button class="btn btn-primary mb-2" routerLink="/add-contractTypeOne">+ Dodaj typ 1</button>
+        <button class="btn btn-primary mb-2" routerLink="/add-contractTypeOne">+ Dodaj kategorię</button>
         <table class="table">
             <thead>
                 <tr>
