--- a/client/src/app/contractType/contract-type-two-list/contract-type-two-list.component.html
+++ b/client/src/app/contractType/contract-type-two-list/contract-type-two-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="table-responsive">
-        <button class="btn btn-primary mb-2" routerLink="/add-contractTypeTwo">+ Dodaj typ 2</button>
+        <button class="btn btn-primary mb-2" routerLink="/add-contractTypeTwo">+ Dodaj podkategorię</button>
         <table class="table">
             <thead>
                 <tr>
