--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,21 +1,63 @@
-<div class="container mt-5">
-    <div *ngIf="!registerMode" style="text-align: center;">
-        <h1>Witaj w aplikacji do katalogowania umów!</h1>
-        <p>Aplikacja umożliwia: </p>
-        <p>- przeglądanie umów</p>
-        <p>- dodawanie umów</p>
-        <p>- edycję umów</p>
-        <p>- dodawanie aneksów do umów</p>
-        <p>Zaloguj się, aby wykonywać powższe funkcje.</p>
-        <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg me-2">Zarejestruj</button>
-        </div>
-    </div>
-    <div *ngIf="registerMode" class="container">
-        <div class="row justify-content-center">
-            <div class="col-4">
-                <app-register [rolesFromHomeComponent]="roles" (cancelRegister)="cancelRegisterMode($event)"></app-register>
+<body>
+  <div class="py-5">
+    <div class="container">
+      <div class="row hidden-md-up">
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Umowy</h4>
+              <h6 class="card-subtitle text-muted">Umowa to porozumienie między dwoma lub więcej stronami, które określa ich wzajemne prawa i obowiązki. 
+                Może mieć formę ustną lub pisemną i jest podstawą do dochodzenia roszczeń w przypadku niewywiązania się z ustaleń.</h6>
             </div>
+          </div>
         </div>
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Aneksy do umowy</h4>
+              <h6 class="card-subtitle text-muted">Aneks do umowy to dokument, który modyfikuje, uzupełnia lub precyzuje warunki istniejącej umowy. 
+                Stanowi integralną część umowy i jest podpisywany przez wszystkie strony, które zawarły pierwotną umowę.</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Pliki pdf do umowy</h4>
+              <h6 class="card-subtitle text-muted">Dokumenty umów przechowywane są w formacie pdf.</h6>
+            </div>
+          </div>
+        </div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Pliki pdf do aneksów</h4>
+              <h6 class="card-subtitle text-muted">Dokumenty aneksów do umowy przechowywane są w formacie pdf.</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Kategorie umów</h4>
+              <h6 class="card-subtitle text-muted">Określają do jakiej kategorii należy umowa. Pozwala na ułatwienie w orgazniacji i zarządzaniu umowami.</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-block">
+              <h4 class="card-title">Podkategorie umów</h4>
+              <h6 class="card-subtitle text-muted">Pozwalają na dokładnejszy podział umów. Jeszcze dokładniej precyzują kategorie.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script> -->
+</body>
